updating alerts, helpers, spacing, fixed color contrast issue

--- a/sass/alert.scss
+++ b/sass/alert.scss
@@ -3,6 +3,7 @@
     padding: $lg;
     margin: $lg 0;
     border-radius: $sm;
+    z-index: 1;
 
     &__text {
         margin: 0;
