--- a/sass/background.scss
+++ b/sass/background.scss
@@ -11,7 +11,7 @@
     &-red {
         background: $red;
     }
-    &--green {
+    &-green {
         background: $green !important;
         border: 1px solid $green !important;
     }
