--- a/sass/brand/_spacing.scss
+++ b/sass/brand/_spacing.scss
@@ -18,12 +18,16 @@
     margin: $lg 0 0 0;
 }
 
+.mt-xl {
+    margin-top: $xl;
+}
+
 .mb-lg {
     margin: 0 0 $lg 0;
 }
 
 .mb-xl {
-    margin: 0 0 $xl 0;
+    margin-bottom: $xl;
 }
 
 .spacer {
