--- a/sass/brand/_variables.scss
+++ b/sass/brand/_variables.scss
@@ -3,7 +3,7 @@ $white: #ffffff;
 $black: #000000;
 $red: #BA0000;
 $yellow: #FFE400;
-$green: #0B8E21;
+$green: #076919;
 $lightPurple: #6B80B3;
 $lightGray: #EDEDED;
 
